Add font css local path.

--- a/options.html
+++ b/options.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Githunt</title>
     <link rel="stylesheet" href="assets/css/main.css"/>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href="assets/css/googlefontapi-Montserrat-400-700.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="assets/css/font-awesome.min.css"/>
 </head>
 <body>
